--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <header>
+      <div class="header-container"></div>
       <img src="./assets/images/logo.svg" alt="" class="logo" />
       <h1 class="title">Body Mass Index Calculator</h1>
       <div class="header__text">
@@ -34,11 +35,11 @@
         <h2>Enter your details below</h2>
 
         <div class="radio-btns">
-          <div>
+          <div class="radio">
             <input type="radio" name="metric" id="metric" />
             <label for="metric">Metric</label>
           </div>
-          <div>
+          <div class="radio">
             <input type="radio" name="imperial" id="imperial" />
             <label for="imperial">Imperial</label>
           </div>
@@ -107,21 +108,30 @@
         </p>
 
         <div class="block-container">
-          <h4>Healthy eating</h4>
-          <p class="main__text">
-            Healthy eating promotes weight control, disease prevention, better
-            digestion, immunity, mental clarity, and mood.
-          </p>
-          <h4>Regular exercise</h4>
-          <p class="main__text">
-            Exercise improves fitness, aids weight control, elevates mood, and
-            reduces disease risk, fostering wellness and longevity.
-          </p>
-          <h4>Adequate sleep</h4>
-          <p class="main__text">
-            Sleep enhances mental clarity, emotional stability, and physical
-            wellness, promoting overall restoration and rejuvenation.
-          </p>
+          <div class="col">
+            <img src="./assets/images/icon-eating.svg" alt="" />
+            <h4>Healthy eating</h4>
+            <p class="main__text">
+              Healthy eating promotes weight control, disease prevention, better
+              digestion, immunity, mental clarity, and mood.
+            </p>
+          </div>
+          <div class="col">
+            <img src="./assets/images/icon-exercise.svg" alt="" />
+            <h4>Regular exercise</h4>
+            <p class="main__text">
+              Exercise improves fitness, aids weight control, elevates mood, and
+              reduces disease risk, fostering wellness and longevity.
+            </p>
+          </div>
+          <div class="col">
+            <img src="./assets/images/icon-sleep.svg" alt="" />
+            <h4>Adequate sleep</h4>
+            <p class="main__text">
+              Sleep enhances mental clarity, emotional stability, and physical
+              wellness, promoting overall restoration and rejuvenation.
+            </p>
+          </div>
         </div>
       </div>
     </main>
@@ -136,7 +146,10 @@
       </p>
 
       <div class="card-container">
-        <h4>Gender</h4>
+        <div class="row">
+          <img src="./assets/images/icon-gender.svg" alt="" />
+          <h4>Gender</h4>
+        </div>
         <p class="main__text">
           The development and body fat composition of girls and boys vary with
           age. Consequently, a child's age and gender are considered when
@@ -144,21 +157,30 @@
         </p>
       </div>
       <div class="card-container">
-        <h4>Age</h4>
+        <div class="row">
+          <img src="./assets/images/icon-age.svg" alt="" />
+          <h4>Age</h4>
+        </div>
         <p class="main__text">
           In aging individuals, increased body fat and muscle loss may cause BMI
           to underestimate body fat content.
         </p>
       </div>
       <div class="card-container">
-        <h4>Muscle</h4>
+        <div class="row">
+          <img src="./assets/images/icon-muscle.svg" alt="" />
+          <h4>Muscle</h4>
+        </div>
         <p class="main__text">
           BMI may misclassify muscular individuals as overweight or obese, as it
           doesn't differentiate muscle from fat.
         </p>
       </div>
       <div class="card-container">
-        <h4>Pregnancy</h4>
+        <div class="row">
+          <img src="./assets/images/icon-pregnancy.svg" alt="" />
+          <h4>Pregnancy</h4>
+        </div>
         <p class="main__text">
           Expectant mothers experience weight gain due to their growing baby.
           Maintaining a healthy pre-pregnancy BMI is advisable to minimise
@@ -166,7 +188,10 @@
         </p>
       </div>
       <div class="card-container">
-        <h4>Race</h4>
+        <div class="row">
+          <img src="./assets/images/icon-race.svg" alt="" />
+          <h4>Race</h4>
+        </div>
         <p class="main__text">
           Certain health concerns may affect individuals of some Black and Asian
           origins at lower BMIs than others. To learn more, it is advised to
