fix: imperial inputs mobile view

--- a/index.html
+++ b/index.html
@@ -69,19 +69,29 @@
         </form>
 
         <form id="imperial-view">
-          <div class="height">
-            <label for="">Height</label>
-            <input type="text" name="height" id="height" />
-
-            <label for="">Height</label>
-            <input type="text" name="height" id="height" />
+          <div class="row">
+            <div class="height">
+              <label for="">Height</label>
+              <input type="text" name="height" id="height" />
+              <span class="input__helper">ft</span>
+            </div>
+            <div class="height">
+              <label for="">Height</label>
+              <input type="text" name="height" id="height" />
+              <span class="input__helper">in</span>
+            </div>
           </div>
-          <div class="weight">
-            <label for="weight">Weight</label>
-            <input type="text" name="weight" id="weight" />
-
-            <label for="weight">Weight</label>
-            <input type="text" name="weight" id="weight" />
+          <div class="row">
+            <div class="weight">
+              <label for="weight">Weight</label>
+              <input type="text" name="weight" id="weight" />
+              <span class="input__helper">st</span>
+            </div>
+            <div class="weight">
+              <label for="weight">Weight</label>
+              <input type="text" name="weight" id="weight" />
+              <span class="input__helper">lbs</span>
+            </div>
           </div>
         </form>
 
