fix: align inputs

--- a/index.html
+++ b/index.html
@@ -69,26 +69,24 @@
         </form>
 
         <form id="imperial-view">
+          <label for="height">Height</label>
           <div class="row">
             <div class="height">
-              <label for="">Height</label>
               <input type="text" name="height" id="height" />
               <span class="input__helper">ft</span>
             </div>
             <div class="height">
-              <label for="">Height</label>
               <input type="text" name="height" id="height" />
               <span class="input__helper">in</span>
             </div>
           </div>
+          <label for="weight">Weight</label>
           <div class="row">
             <div class="weight">
-              <label for="weight">Weight</label>
               <input type="text" name="weight" id="weight" />
               <span class="input__helper">st</span>
             </div>
             <div class="weight">
-              <label for="weight">Weight</label>
               <input type="text" name="weight" id="weight" />
               <span class="input__helper">lbs</span>
             </div>
