feat: despription bmi and ideal weight

--- a/index.html
+++ b/index.html
@@ -93,16 +93,10 @@
           </div>
         </form>
 
-        <div class="BMI-result">
-          <h6>Your BMI is...</h6>
-          <h2 id="bmi-score">Score</h2>
-          <div>
-            <p>
-              Your BMI suggests you're
-              <span id="classification"><!-- add classification -->.</span>
-              Your ideal weight is between
-              <span id="range"><!-- add range -->.</span>
-            </p>
+        <div id="BMI-result">
+          <h2 id="bmi-score">Welcome!</h2>
+          <div id="bmi-explanation">
+            Enter your height and weight and you’ll see your BMI result here
           </div>
         </div>
       </div>
