--- a/index.html
+++ b/index.html
@@ -103,47 +103,56 @@
     </header>
 
     <main>
-      <img
-        src="./assets/images/image-man-eating.webp"
-        alt="A man eating"
-        class="image-man-eating"
-      />
+      <div class="col">
+        <img
+          src="./assets/images/image-man-eating.webp"
+          alt="A man eating"
+          class="image-man-eating"
+        />
+        <div class="wrapper">
+          <h2 class="main__title">What your BMI result means</h2>
+          <p class="main__text">
+            A BMI range of 18.5 to 24.9 is considered a 'healthy weight.'
+            Maintaining a healthy weight may lower your chances of experiencing
+            health issues later on, such as obesity and type 2 diabetes. Aim for a
+            nutritious diet with reduced fat and sugar content, incorporating ample
+            fruits and vegetables. Additionally, strive for regular physical
+            activity, ideally about 30 minutes daily for five days a week.
+          </p>
+        </div>
+      </div>
 
       <div class="main-container">
-        <h2 class="main__title">What your BMI result means</h2>
-        <p class="main__text">
-          A BMI range of 18.5 to 24.9 is considered a 'healthy weight.'
-          Maintaining a healthy weight may lower your chances of experiencing
-          health issues later on, such as obesity and type 2 diabetes. Aim for a
-          nutritious diet with reduced fat and sugar content, incorporating
-          ample fruits and vegetables. Additionally, strive for regular physical
-          activity, ideally about 30 minutes daily for five days a week.
-        </p>
-
         <div class="block-container">
           <div class="col">
             <img src="./assets/images/icon-eating.svg" alt="" />
-            <h4>Healthy eating</h4>
-            <p class="main__text">
-              Healthy eating promotes weight control, disease prevention, better
-              digestion, immunity, mental clarity, and mood.
-            </p>
+            <div>
+              <h4>Healthy eating</h4>
+              <p class="main__text">
+                Healthy eating promotes weight control, disease prevention, better
+                digestion, immunity, mental clarity, and mood.
+              </p>
+            </div>
           </div>
           <div class="col">
             <img src="./assets/images/icon-exercise.svg" alt="" />
-            <h4>Regular exercise</h4>
-            <p class="main__text">
-              Exercise improves fitness, aids weight control, elevates mood, and
-              reduces disease risk, fostering wellness and longevity.
-            </p>
+            <div>
+              <h4>Regular exercise</h4>
+              <p class="main__text">
+                Exercise improves fitness, aids weight control, elevates mood, and
+                reduces disease risk, fostering wellness and longevity.
+              </p>
+            </div>
           </div>
           <div class="col">
             <img src="./assets/images/icon-sleep.svg" alt="" />
-            <h4>Adequate sleep</h4>
-            <p class="main__text">
-              Sleep enhances mental clarity, emotional stability, and physical
-              wellness, promoting overall restoration and rejuvenation.
-            </p>
+            <div>
+              <h4>Adequate sleep</h4>
+              <p class="main__text">
+                Sleep enhances mental clarity, emotional stability, and physical
+                wellness, promoting overall restoration and rejuvenation.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -158,58 +167,60 @@
         beneficial to use.
       </p>
 
-      <div class="card-container">
-        <div class="row">
-          <img src="./assets/images/icon-gender.svg" alt="" />
-          <h4>Gender</h4>
+      <div class="cards">
+        <div class="card-container">
+          <div class="row">
+            <img src="./assets/images/icon-gender.svg" alt="" />
+            <h4>Gender</h4>
+          </div>
+          <p class="main__text">
+            The development and body fat composition of girls and boys vary with
+            age. Consequently, a child's age and gender are considered when
+            evaluating their BMI.
+          </p>
         </div>
-        <p class="main__text">
-          The development and body fat composition of girls and boys vary with
-          age. Consequently, a child's age and gender are considered when
-          evaluating their BMI.
-        </p>
-      </div>
-      <div class="card-container">
-        <div class="row">
-          <img src="./assets/images/icon-age.svg" alt="" />
-          <h4>Age</h4>
+        <div class="card-container">
+          <div class="row">
+            <img src="./assets/images/icon-age.svg" alt="" />
+            <h4>Age</h4>
+          </div>
+          <p class="main__text">
+            In aging individuals, increased body fat and muscle loss may cause BMI
+            to underestimate body fat content.
+          </p>
         </div>
-        <p class="main__text">
-          In aging individuals, increased body fat and muscle loss may cause BMI
-          to underestimate body fat content.
-        </p>
-      </div>
-      <div class="card-container">
-        <div class="row">
-          <img src="./assets/images/icon-muscle.svg" alt="" />
-          <h4>Muscle</h4>
+        <div class="card-container">
+          <div class="row">
+            <img src="./assets/images/icon-muscle.svg" alt="" />
+            <h4>Muscle</h4>
+          </div>
+          <p class="main__text">
+            BMI may misclassify muscular individuals as overweight or obese, as it
+            doesn't differentiate muscle from fat.
+          </p>
         </div>
-        <p class="main__text">
-          BMI may misclassify muscular individuals as overweight or obese, as it
-          doesn't differentiate muscle from fat.
-        </p>
-      </div>
-      <div class="card-container">
-        <div class="row">
-          <img src="./assets/images/icon-pregnancy.svg" alt="" />
-          <h4>Pregnancy</h4>
+        <div class="card-container">
+          <div class="row">
+            <img src="./assets/images/icon-pregnancy.svg" alt="" />
+            <h4>Pregnancy</h4>
+          </div>
+          <p class="main__text">
+            Expectant mothers experience weight gain due to their growing baby.
+            Maintaining a healthy pre-pregnancy BMI is advisable to minimise
+            health risks for both mother and child.
+          </p>
         </div>
-        <p class="main__text">
-          Expectant mothers experience weight gain due to their growing baby.
-          Maintaining a healthy pre-pregnancy BMI is advisable to minimise
-          health risks for both mother and child.
-        </p>
-      </div>
-      <div class="card-container">
-        <div class="row">
-          <img src="./assets/images/icon-race.svg" alt="" />
-          <h4>Race</h4>
+        <div class="card-container">
+          <div class="row">
+            <img src="./assets/images/icon-race.svg" alt="" />
+            <h4>Race</h4>
+          </div>
+          <p class="main__text">
+            Certain health concerns may affect individuals of some Black and Asian
+            origins at lower BMIs than others. To learn more, it is advised to
+            discuss this with your GP or practice nurse.
+          </p>
         </div>
-        <p class="main__text">
-          Certain health concerns may affect individuals of some Black and Asian
-          origins at lower BMIs than others. To learn more, it is advised to
-          discuss this with your GP or practice nurse.
-        </p>
       </div>
     </section>
     <script src="./index.js"></script>
