feat: imperial metrics

--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
           <label for="height">Height</label>
           <div class="row">
             <div class="height">
-              <input type="text" name="height" id="iheight" />
+              <input type="text" name="height" id="ftHeight" />
               <span class="input__helper">ft</span>
             </div>
             <div class="height">
-              <input type="text" name="height" id="iheight" />
+              <input type="text" name="height" id="inHeight" />
               <span class="input__helper">in</span>
             </div>
           </div>
           <label for="weight">Weight</label>
           <div class="row">
             <div class="weight">
-              <input type="text" name="weight" id="weight" />
+              <input type="text" name="weight" id="stWeight" />
               <span class="input__helper">st</span>
             </div>
             <div class="weight">
-              <input type="text" name="weight" id="weight" />
+              <input type="text" name="weight" id="lbsWeight" />
               <span class="input__helper">lbs</span>
             </div>
           </div>
