fix: responsive desktop view

--- a/index.html
+++ b/index.html
@@ -195,13 +195,15 @@
     </main>
 
     <section>
-      <h2 class="section__title">Limitations of BMI</h2>
-      <p class="section__text">
-        Although BMI is often a practical indicator of healthy weight, it is not
-        suited for every person. Specific groups should carefully consider their
-        BMI outcomes, and in certain cases, the measurement may not be
-        beneficial to use.
-      </p>
+      <div>
+        <h2 class="section__title">Limitations of BMI</h2>
+        <p class="section__text">
+          Although BMI is often a practical indicator of healthy weight, it is
+          not suited for every person. Specific groups should carefully consider
+          their BMI outcomes, and in certain cases, the measurement may not be
+          beneficial to use.
+        </p>
+      </div>
 
       <div class="cards">
         <div class="card-container">
